# audit-ready-finance

./: .env.example  .gitignore  .vercelignore  Dockerfile  app.py  audit_trail.py  claude_client.py  config.py  main.py  pyproject.toml  render.yaml  requirements-full.txt  requirements.txt  retrieval.py  vercel.json
api/: index.py
cognee_data/databases/: cognee_graph_kuzu.wal
cognee_data/databases/cognee.lancedb/DocumentChunk_text.lance/_transactions/: 0-d5356a42-7ea7-464a-854d-a77c5ad2c276.txn  1-3ba167a8-c7bc-4c4a-88f7-6c4d0d933c68.txn  2-2776551c-bf84-41ab-8cb9-f69c69cb4ad4.txn  3-b5f0de66-dad9-4fe7-904c-da42674ba25b.txn  4-df941283-dc7a-402a-a9fe-ed4697ee3f30.txn
cognee_data/databases/cognee.lancedb/EdgeType_relationship_name.lance/_deletions/: 0-3-17392228953721649594.arrow  4-6-10658478379614314718.arrow
cognee_data/databases/cognee.lancedb/EdgeType_relationship_name.lance/_transactions/: 0-798530c3-5411-495a-b599-115151eaa08f.txn  1-c6e85324-dc20-43ba-be9a-9aec32bb1f14.txn  2-43cdc4d5-aab2-4cae-bb89-84c65d18b665.txn  3-79a97941-e369-4be9-8d76-b5e697e26d6a.txn  4-acacd44a-6703-4368-87e0-22e91a63a79e.txn  5-cf917f43-6515-4d65-b8ec-83d4b3fffd3c.txn  6-e3db3b1a-813b-44c4-8c1b-4feb7003a3eb.txn
cognee_data/databases/cognee.lancedb/EntityType_name.lance/_transactions/: 0-14a04d26-ff67-4992-bb5f-74804ea0aa75.txn  1-087533a3-4857-4a92-931a-741b530244bf.txn  2-6d05cad3-7369-4313-b7e3-af734901d992.txn  3-f68f91af-526a-45c3-9549-c3c0a01738d5.txn  4-35086c74-ca66-4a30-9f7a-eb04064a472b.txn
frontend/: index.html
(+13 files in other folders)
